flapivor/tests/m3/hopix/typechecker/good/50-pattern-matching-14.hopix
val x : Int = case 'x' { 'x' => 1 | (_ : Char) => 0 }