flapivor/tests/m3/hopix/typechecker/bad/41-record-matching-08.hopix
type T<> = { x : Int }

val main : Int = case { x = 0 }<Int> { { x = (_ : String) }<Int> => 0 }